--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,25 @@
     <div class="container">
 
         <div class=game-list>
-        <h1 class=header>Games</h1>
+        <h1 class=header>Available Games</h1>
             <ul>
             {% for game in games %}
-            <li><a href="{{ url_for('game', game=game) }}">
-                {{ game }}
-            </a></li>
+                {% if !game.is_over %}
+                    <li><a href="{{ url_for('game', game_name=game.name) }}">
+                        {{ game.name }}
+                    </a></li>
+                {% endif %}
+            {% endfor %}
+            </ul>
+        </div>
+
+        <div class=game-list>
+        <h1 class=header>All Games</h1>
+            <ul>
+            {% for game in games %}
+                <li><a href="{{ url_for('game', game_name=game.name) }}">
+                    {{ game.name }}
+                </a></li>
             {% endfor %}
             </ul>
         </div>
