Create links using game-id instead of game-name

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <ul>
             {% for game in games %}
                 {% if not game.started %}
-                    <li><a href="{{ url_for('game', game=game.name) }}">
+                    <li><a href="{{ url_for('game', game=game.id) }}">
                         {{ game.name }}
                     </a></li>
                 {% endif %}
@@ -28,7 +28,7 @@
         <h1 class=header>All Games</h1>
             <ul>
             {% for game in games %}
-                <li><a href="{{ url_for('game', game=game.name) }}">
+                <li><a href="{{ url_for('game', game=game.id) }}">
                     {{ game.name }}
                 </a></li>
             {% endfor %}
