--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  
 <head>
-    <title>Avalon online osv</title>
+    <title>The Resistance Online O.S.V</title>
  
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 </head>
