--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
  
 <head>
-    <title>The Resistance Online O.S.V</title>
+    <title>Login</title>
  
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 </head>
@@ -11,9 +11,9 @@
  
     <div class="container">
 
-        <form method="post" class=form id=login>
-            <p><input type=text name=username>
-            <p><input type=text name=password>
+        <form method="post" class=form id=login-form>
+            <input type=text name=username placeholder="username"><br>
+            <input type=text name=password placeholder="password"><br>
             <p><input type=submit value=Login>
         </form>
 
