--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
         <form method="post" class=form id=login-form>
             <input type=text name=username placeholder="username"><br>
             <input type=text name=password placeholder="password"><br>
-            <p><input type=submit value=Login>
+            <input type=submit value=Login>
         </form>
 
     </div>
