--- a/templates/game.html
+++ b/templates/game.html
@@ -9,13 +9,13 @@
  
 <body>
  
-    <div class="container">
+    <div class=container>
         <div id=player-list>
             <h1 class=header>Players</h1>
             <ul>
-            {% for player in players %}
+            {% for (name, player) in players %}
                 <li>
-                    {{ player }}
+                    {{ name }} : {{ player.is_spy }}
                 </li>
             {% endfor %}
             </ul>
@@ -23,20 +23,21 @@
 
         <div id=chat>
             <h1>Chat</h1>
+            <form method="post" id=post-message-form action={{ url_for('submit_post', game=game) }}>
+                <input type=text name=body><br>
+                <input type=submit value=Post>
+            </form>
+
             <ul>
-            {% for post in posts|sort(attribute='created_at') %}
+            {% for (author, post) in posts|sort(attribute='Posts.created_at', reverse=True) %}
                 <li>
-                    <div class=post>
-                        <p class=author>{{ post.user }} @ {{ post.created_at.strftime("%y-%m-%d %H:%M") }}</p>
-                        <p>{{post.body}}</p>
-                    </div>
+                    <p class=author>{{ author }} @ {{ post.created_at.strftime("%y-%m-%d %H:%M") }}</p>
+                    <p>{{ post.body }}</p>
                 </li>
             {% endfor %}
             </ul>
         </div>
- 
     </div>
-
 </body>
  
 </html>
