Move game.html specific styling to game.css

--- a/templates/game.html
+++ b/templates/game.html
@@ -5,6 +5,7 @@
     <title>Game</title>
  
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='game.css') }}">
 </head>
  
 <body>
