--- a/templates/index_for_users.html
+++ b/templates/index_for_users.html
@@ -11,7 +11,7 @@
  
     <div class="container">
         <form method="post" id=create-game-form action={{ url_for('create_game') }}>
-            <input type=text name=game-name>
+            <input type=text name=game-name placeholder="Name">
             <input type=submit value="Create game">
         </form>
 
