--- a/templates/game_not_started.html
+++ b/templates/game_not_started.html
@@ -26,15 +26,15 @@
         <form method="post" id=start-game action={{ url_for('start_game', game=game) }}>
             <input type=submit value="Start game">
         </form>
+        {% elif not user_is_player %}
+        <form method="post" id=join-game action={{ url_for('join_game', game=game) }}>
+            <input type=submit value="Join game">
+        </form>
         {% endif %}
 
         <div id=chat>
             <h1>Chat</h1>
-            <form method="post" id=post-message-form action={{ url_for('submit_post', game=game) }}>
-                <input type=text name=body><br>
-                <input type=submit value=Post>
-            </form>
-
+            <p>Players will be able to post when the game has started</p>
             <ul>
             {% for (author, post) in posts|sort(attribute='Posts.created_at', reverse=True) %}
                 <li>
