--- a/templates/game_for_players.html
+++ b/templates/game_for_players.html
@@ -1,66 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
- 
-<head>
-    <title>Game</title>
- 
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+{% extends "base.html" %}
+{% block title%}Game{% endblock %}
+{% block head %}
+    {{ super() }}
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='game.css') }}">
-</head>
- 
-<body>
- 
-    <div class=container>
-        <div id=player-list>
-            <h1 class=header>Players</h1>
-            <ul>
-            {% for (name, player) in players %}
-                <li>
-                    {{ name }} {% if user_is_spy and player.is_spy %} (spy) {% endif %}
-                </li>
-            {% endfor %}
-            </ul>
-        </div>
+{% endblock%}
 
-        <div id=current-turn>
-            <h1 class=header>Current Turn</h1>
-            {% if nominees|length == 0 %}
-                {% if user_is_leader %}
-                <!-- nominee form -->
-                {% else %}
-                <p> {{ leader }} hasn't nominated a team yet</p>
-                {% endif %}
-            {% else %}
-            <p>{{ leader }} has nominated:</p>
-            <ul class=nominees>
-                {% for nominee in nominees %}
-                <li>{{ nominee.name }}</li>
-                {% endfor %}
-            </ul>
-            <form method="post" id=turn-vote action={{ url_for('turn_vote', game=game) }}>
-                <input type=submit name=approve value=Approve>
-                <input type=submit name=reject value=Reject>
-            </form>
-            {% endif %}
-        </div>
-
-        <div id=chat>
-            <h1>Chat</h1>
-            <form method="post" id=post-message-form action={{ url_for('submit_post', game=game) }}>
-                <input type=text name=body><br>
-                <input type=submit value=Post>
-            </form>
-
-            <ul>
-            {% for (author, post) in posts|sort(attribute='Posts.created_at', reverse=True) %}
-                <li>
-                    <p class=author>{{ author }} @ {{ post.created_at.strftime("%y-%m-%d %H:%M") }}</p>
-                    <p>{{ post.body }}</p>
-                </li>
-            {% endfor %}
-            </ul>
-        </div>
+{% block container %}
+    <div id=player-list>
+        <h1 class=header>Players</h1>
+        <ul>
+        {% for (name, player) in players %}
+            <li>
+                {{ name }} {% if user_is_spy and player.is_spy %} (spy) {% endif %}
+            </li>
+        {% endfor %}
+        </ul>
     </div>
-</body>
- 
-</html>
+
+    <div id=current-turn>
+        <h1 class=header>Current Turn</h1>
+        {% if nominees|length == 0 %}
+            {% if user_is_leader %}
+            <!-- nominee form -->
+            {% else %}
+            <p> {{ leader }} hasn't nominated a team yet</p>
+            {% endif %}
+        {% else %}
+        <p>{{ leader }} has nominated:</p>
+        <ul class=nominees>
+            {% for nominee in nominees %}
+            <li>{{ nominee.name }}</li>
+            {% endfor %}
+        </ul>
+        <form method="post" id=turn-vote action={{ url_for('turn_vote', game=game) }}>
+            <input type=submit name=approve value=Approve>
+            <input type=submit name=reject value=Reject>
+        </form>
+        {% endif %}
+    </div>
+
+    <div id=chat>
+        <h1>Chat</h1>
+        <form method="post" id=post-message-form action={{ url_for('submit_post', game=game) }}>
+            <input type=text name=body><br>
+            <input type=submit value=Post>
+        </form>
+
+        <ul>
+        {% for (author, post) in posts|sort(attribute='Posts.created_at', reverse=True) %}
+            <li>
+                <p class=author>{{ author }} @ {{ post.created_at.strftime("%y-%m-%d %H:%M") }}</p>
+                <p>{{ post.body }}</p>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
+{% endblock %}
