--- a/templates/game_not_started.html
+++ b/templates/game_not_started.html
@@ -1,49 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
- 
-<head>
-    <title>Game</title>
- 
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+{% extends "base.html" %}
+{% block title%}Game{% endblock %}
+{% block head %}
+    {{ super() }}
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='game.css') }}">
-</head>
- 
-<body>
- 
-    <div class=container>
-        <div id=player-list>
-            <h1 class=header>Players</h1>
-            <ul>
-            {% for (name, player) in players %}
-                <li>
-                    {{ name }}
-                </li>
-            {% endfor %}
-            </ul>
-        </div>
+{% endblock%}
 
-        {% if user_is_creator %}
-        <form method="post" id=start-game action={{ url_for('start_game', game=game) }}>
-            <input type=submit value="Start game">
-        </form>
-        {% elif not user_is_player %}
-        <form method="post" id=join-game action={{ url_for('join_game', game=game) }}>
-            <input type=submit value="Join game">
-        </form>
-        {% endif %}
-
-        <div id=chat>
-            <h1>Chat</h1>
-            <p>Players will be able to post when the game has started</p>
-            <ul>
-            {% for (author, post) in posts|sort(attribute='Posts.created_at', reverse=True) %}
-                <li>
-                    <p class=author>{{ author }} @ {{ post.created_at.strftime("%y-%m-%d %H:%M") }}</p>
-                    <p>{{ post.body }}</p>
-                </li>
-            {% endfor %}
-            </ul>
-        </div>
+{% block container %}
+    <div id=player-list>
+        <h1 class=header>Players</h1>
+        <ul>
+        {% for (name, player) in players %}
+            <li>
+                {{ name }}
+            </li>
+        {% endfor %}
+        </ul>
     </div>
-</body>
-</html>
+
+    {% if user_is_creator %}
+    <form method="post" id=start-game action={{ url_for('start_game', game=game) }}>
+        <input type=submit value="Start game">
+    </form>
+    {% elif not user_is_player %}
+    <form method="post" id=join-game action={{ url_for('join_game', game=game) }}>
+        <input type=submit value="Join game">
+    </form>
+    {% endif %}
+
+    <div id=chat>
+        <h1>Chat</h1>
+        <p>Players will be able to post when the game has started</p>
+        <ul>
+        {% for (author, post) in posts|sort(attribute='Posts.created_at', reverse=True) %}
+            <li>
+                <p class=author>{{ author }} @ {{ post.created_at.strftime("%y-%m-%d %H:%M") }}</p>
+                <p>{{ post.body }}</p>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
+{% endblock %}
