--- a/templates/index_for_users.html
+++ b/templates/index_for_users.html
@@ -1,57 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
- 
-<head>
-    <title>The Resistance Online O.S.V</title>
- 
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-</head>
- 
-<body>
- 
-    <div class="container">
-        <form method="post" id=create-game-form action={{ url_for('create_game') }}>
-            <input type=text name=game-name placeholder="Name">
-            <input type=submit value="Create game">
-        </form>
+{% extends "base.html" %}
+{% block title%}Home{% endblock %}
+{% block head %}
+    {{ super() }}
+{% endblock%}
 
-        <div class=game-list>
+{% block container %}
+    <form method="post" id=create-game-form action={{ url_for('create_game') }}>
+        <input type=text name=game-name placeholder="Name">
+        <input type=submit value="Create game">
+    </form>
+
+    <div class=game-list>
         <h1 class=header>Your Games</h1>
-            <ul>
-            {% for game in usergames %}
-                <li><a href="{{ url_for('game', game=game.id) }}">
-                    {{ game.name }}
-                </a></li>
-            {% endfor %}
-            </ul>
-        </div>
-
-        <div class=game-list>
-        <h1 class=header>Available Games</h1>
-            <ul>
-            {% for game in games|sort(attribute='id', reverse=True) %}
-                {% if not game.started %}
-                    <li><a href="{{ url_for('game', game=game.id) }}">
-                        {{ game.name }}
-                    </a></li>
-                {% endif %}
-            {% endfor %}
-            </ul>
-        </div>
-
-        <div class=game-list>
-        <h1 class=header>All Games</h1>
-            <ul>
-            {% for game in games|sort(attribute='id') %}
-                <li><a href="{{ url_for('game', game=game.id) }}">
-                    {{ game.name }}
-                </a></li>
-            {% endfor %}
-            </ul>
-        </div>
- 
+        <ul>
+        {% for game in usergames %}
+            <li><a href="{{ url_for('game', game=game.id) }}">
+                {{ game.name }}
+            </a></li>
+        {% endfor %}
+        </ul>
     </div>
 
-</body>
- 
-</html>
+    <div class=game-list>
+        <h1 class=header>Available Games</h1>
+        <ul>
+        {% for game in games|sort(attribute='id', reverse=True) %}
+            {% if not game.started %}
+                <li><a href="{{ url_for('game', game=game.id) }}">
+                    {{ game.name }}
+                </a></li>
+            {% endif %}
+        {% endfor %}
+        </ul>
+    </div>
+
+    <div class=game-list>
+        <h1 class=header>All Games</h1>
+        <ul>
+        {% for game in games|sort(attribute='id') %}
+            <li><a href="{{ url_for('game', game=game.id) }}">
+                {{ game.name }}
+            </a></li>
+        {% endfor %}
+        </ul>
+    </div>
+{% endblock %} 
