Make error strong

--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
         </form>
 
         {% if failed %}
-        <p id=failed-login>Invalid credentials</p>
+        <p id=failed-login><strong>Invalid credentials</strong></p>
         {% endif %}
 
     </div>
