--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             <li><a href={{ url_for('logout') }}>Logout</a></li>
             {% else %}
             <li><a href={{ url_for('login') }}>Login</a></li>
-            <!--            <li><a href="">Sign up</a></li> -->
+            <li><a href={{ url_for('signup') }}>Sign up</a></li>
             {% endif %}
             <li><a href={{ url_for('index') }}>Home</a></li>
         </ul>
