--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,7 +11,7 @@
 <body>
  
     <div class="container">
-        <p>Only lowercase usernames are allowed and they are unique</p>
+        <p>Usernames are unique on the lowercase variants</p>
         <p>Your password will not be stored in plaintext. If you lose it you lose access to your account</p>
 
         <form method="post" class=form id=signup-form>
