--- a/templates/game_not_started.html
+++ b/templates/game_not_started.html
@@ -1,6 +1,6 @@
 {% extends "game.html" %}
 
-{% block player-list %}
+{% block player_list %}
     <p>There has to be at least 5 and at most 10 players</p>
     {{ super() }}
 
@@ -15,7 +15,7 @@
     {% endif %}
 {% endblock %}
 
-{% block current-turn %}
+{% block current_turn %}
     <p>This information will be available once the game starts</p>
 {% endblock %}
 
