Fix nominee list

--- a/templates/game_for_anonymous.html
+++ b/templates/game_for_anonymous.html
@@ -11,7 +11,7 @@
     <p>{{ leader }} has nominated:</p>
     <ul class=nominess>
         {% for nominee in nominees %}
-        <li>{{ nominee.name }}</li>
+        <li>{{ nominee }}</li>
         {% endfor %}
     </ul>
     {% endif %}
