--- a/templates/game_for_players.html
+++ b/templates/game_for_players.html
@@ -28,7 +28,7 @@
         <p>{{ leader }} has nominated:</p>
         <ul class=nominees>
             {% for nominee in nominees %}
-            <li>{{ nominee.name }}</li>
+            <li>{{ nominee }}</li>
             {% endfor %}
         </ul>
         <form method="post" id=turn-vote action={{ url_for('turn_vote', game=game) }}>
